# ALAS

./: .gitignore  ALAS_BOT_MECHANICS.md  ALAS_LLM_OCR_BRIDGE_DOCUMENTATION.md  ALAS_Method_Analysis_Matrix.md  ALAS_OCR_PARSING_GAP_ANALYSIS.md  ALAS_VISION_ARCHITECTURE.md  CLAUDE.md  CODE_REVIEW_REQUEST.md  CODE_REVIEW_RESPONSE.md  NAVIGATION_OCR_TEST_README.md  PRODUCTION_READINESS_PROMPT.md  TEST_RESULTS.md  alas.py  analyze_md_files.md  paddleocr_improvements_summary.md  production_readiness_summary.md  pyproject.toml  pytest.ini  requirements-in.txt  run_alas_vision.bat  run_gui.py  run_screenshot_tests.py  run_tests.py  screenshot_fix_validation_report.md  test_gaps.md  test_navigation_ocr_loop.py  test_navigation_ocr_simple.py  test_ocr.py  test_ocr_direct_navigation.py  test_screenshot_simple.py  three_strike_explanation.md  verify_screenshot_fix.py
.claude/: settings.local.json
.github/: copilot.yml
.github/workflows/: ai-code-review.yml  simple-review.yml  tests.yml
deploy/: pip.py
dev_tools/: requirements_updater.py
method_analysis/: analysis_alas_AzurLaneAutoScript___init__.md  analysis_alas_AzurLaneAutoScript_config.md  analysis_alas_AzurLaneAutoScript_device.md  analysis_alas_AzurLaneAutoScript_dorm.md  analysis_alas_AzurLaneAutoScript_loop.md  analysis_alas_AzurLaneAutoScript_run.md  analysis_device_Device___init__.md  analysis_device_Device_screenshot.md  analysis_device_Device_stuck_record_check.md  analysis_screenshot_Screenshot_check_screen_black.md  analysis_screenshot_Screenshot_screenshot.md
method_trace/: trace_AzurLaneAutoScript_loop.md  trace_AzurLaneAutoScript_run.md  trace_Device_init.md  trace_Device_stuck_record_check.md  trace_OCR_integration.md  trace_Screenshot_check_screen_black.md  trace_Screenshot_screenshot.md
module/: exception.py  logger.py  vision_llm.py
module/base/: error_handler.py
module/campaign/: campaign_status.py
module/commission/: project.py
module/config/: config_generated.py
module/device/: control.py  screenshot.py
module/dorm/: dorm.py
module/guild/: logistics.py
module/log_res/: log_res.py
module/meowfficer/: enhance.py
module/ocr/: al_ocr.py  llm_bridge.py  llm_integration_examples.py  llm_parsers.py  llm_parsers_extended.py  ocr.py  paddleocr_v3.py  paddleocr_v3_improved.py
module/research/: project.py
module/tactical/: tactical_class.py
module/webui/: process_manager.py
tests/: test_integration.py  test_ocr_performance.py  test_ocr_simple.py  test_ocr_system.py  test_syntax.py  tests.md
tests/unit/: test_modernization.py  test_screenshot_comprehensive.py  test_screenshot_integration.py  test_screenshot_retry_fix.py  (+1 more)
(+23 files in other folders)
